force-app/main/default/objects/Fraud_Comment__c/Fraud_Comment__c.object-meta.xml
<CustomObject>
    <label>Fraud_Comment</label>
    <nameField>
        <label>Fraud_Comment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fraud_Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>