force-app/main/default/objects/Fraud_Comment__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fraud_Comments</relationshipLabel>
    <relationshipName>Fraud_Comments1</relationshipName>
    <type>Lookup</type>
</CustomField>