force-app/main/default/objects/Fraud_Comment__c/fields/TechOwnerName__c.field-meta.xml
<CustomField>
    <fullName>TechOwnerName__c</fullName>
    <formula>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TechOwnerName</label>
    <type>Text</type>
</CustomField>